--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 <input type = "sumbit" value = "login">
 
 </body>
+<title>  Authentication </title>
+<input type = "text" placeholder = "Mobile number">
+<input type = "text" placeholder = "OTP">
+
 
 </html>
